2016-01-14 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/lib/pic14/configure,
	  device/lib/pic14/configure.ac,
	  device/lib/pic16/configure.ac:
	  Do away with the automake warning:
	  "option 'subdir-objects' is disabled"

	* device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/depcomp,
	  device/lib/pic16/install-sh,
	  device/lib/pic16/missing,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libio/adc.ignore,
	  device/lib/pic16/libio/i2c.ignore,
	  device/lib/pic16/libio/usart.ignore,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/non-free/include/pic16/pic18fam.h:
	  Improve of update to gputils-1.4.2-1.

2016-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurate handling of Z80/Z180 I/O in peepholes.

2016-01-11 Ben Shi <powerstudio1st AT 163 DOT com>
        * src/ds390/ralloc.c
        * src/mcs51/ralloc.c
          Improve positionRegs().
        * src/mcs51/gen.c
          Roll back to previous version.
        * support/regression/tests/bug-2263.c
        * support/regression/tests/bug-2403.c
          Add new test cases.

2016-01-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurate handling of Z80/Z180 I/O in peepholes.

2016-01-10 Ben Shi <powerstudio1st AT 163 DOT com>

        * src/mcs51/gen.c
          Fix a bug in genOr() when all operands are in registers.
        * support/regression/tests/bug-2448.c
          Add a new test case.

2016-01-09 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl,
	  support/optimize_pic16devices.pl,
	  support/z80-disasm.pl:
	  Some minor repairs.

	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,